--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="src\assets\logo_icon.ico" type="image/icon type">
     <title>How it is</title>
   </head>
   <body>
@@ -9,3 +10,12 @@
     <script src="/dist/build.js"></script>
   </body>
 </html>
+
+<style>
+  
+  * {
+    margin: 0;
+    padding: 0;
+  }
+
+</style>
